# scholar_source

./: .env.example  CACHE_IMPLEMENTATION_PLAN.md  CELERY_RAILWAY_TROUBLESHOOTING.md  Deployment_Plan.md  Future_plans.md  IMPLEMENTATION_PLAN.md  Procfile  Procfile.railway  QUICK_RAILWAY_REFERENCE.md  RAILWAY_DEPLOYMENT.md  RAILWAY_ENVIRONMENTS.md  README.md  TESTING_GUIDE.md  TESTING_PLAN.md  claude.md  pyproject.toml  pytest.ini  railway.backend.json  railway.celery.json  requirements-dev.txt  requirements.txt  supabase_schema.sql  test_crew.py  test_rate_limiting.py  test_redis_connection.py
.github/workflows/: coverage.yml  test.yml
backend/: CACHE_GUIDE.md  cache.py  celery_app.py  crew_runner.py  csrf_protection.py  error_utils.py  jobs.py  logging_config.py  main.py  markdown_parser.py  models.py  rate_limiter.py  tasks.py  test_celery.py  test_error_utils.py
docs/: Deployment_Plan.md  RATE_LIMITING_IMPLEMENTATION.md  SYSTEM_DESIGN.md  TECHNICAL_DESIGN.md  TESTING_GUIDE.md  TESTING_PLAN.md  celery_setup_summary.md  scaling_plan.md  scholar_source_SDD.md  scholar_source_TDD.md
scripts/: README.md  railway_worker_start.sh  start_worker.sh  test-all.sh  test-backend.sh  test-frontend.sh  test.py  test_celery_connection.sh  verify_setup.sh
src/scholar_source/: crew.py  main.py
src/scholar_source/config/: agents.yaml  tasks.yaml
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_api_endpoints.py  test_job_lifecycle.py
tests/unit/: __init__.py  test_cache.py  test_markdown_parser.py  test_models.py  test_rate_limiter.py
web/: index.html  package-lock.json  package.json  package.json.additions  tailwind.config.js  vite.config.js  vitest.config.js
web/src/: App.jsx  index.css
web/src/api/: client.js  client.test.js
web/src/components/: ConfirmDialog.jsx  ConfirmDialog.test.jsx  CourseForm.css  CourseForm.jsx  Hero.jsx  Hero.test.jsx  InlineSearchStatus.jsx  LoadingStatus.css  LoadingStatus.jsx  MobileFilterToggle.jsx  ResultCard.jsx  ResultCard.test.jsx  ResultsTable.css  ResultsTable.jsx  StatusMessage.jsx  StatusMessage.test.jsx
(+11 files in other folders)
