[project]
name = "scholar_source"
version = "0.1.0"
description = "scholar-source using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
    "lancedb<0.26",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.0.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "resend>=0.8.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "celery>=5.3.0",
]

[project.optional-dependencies]
dev = [
    # Testing framework
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    # HTTP testing
    "httpx>=0.24.0",
    # Mocking and fixtures
    "fakeredis>=2.19.0",
    "faker>=20.0.0",
    # Code quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
scholar_source = "scholar_source.main:run"
run_crew = "scholar_source.main:run"
train = "scholar_source.main:train"
replay = "scholar_source.main:replay"
test = "scholar_source.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
